fix light dark mode. more small style adjustments

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -7,6 +7,7 @@
    TODO apply as a temportary class to not override other transitions */
 * {
   transition: color 0.01s linear;
+  box-sizing: border-box;
 }
 
 .full-view {
